change red color to fix contrast

--- a/code/style.css
+++ b/code/style.css
@@ -437,7 +437,7 @@ a:hover, .footer {
 
   .red {
     /* color: #cc1d0e; */
-    color: orangered;
+    color: #f05e51;
   }
   
   .technologies {
